--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
             </div>
 
             <div class="paragraphe">
-                <p>Après quinze ans dans l’édition papier, j’effectue une reconversion partielle. Au fil du temps s’est imposé à moi le besoin de quitter la chaîne littéraire imprimée, lieu de ma passion mais à l'écosystème fragile, et de me former aux outils numériques, autant par curiosité que par nécessité.</p>
-            </div>
-
-            <div class="paragraphe">
-                <p>Je découvre dans ce cursus une immensité que je soupçonnais mais ne concevais pas, fascinante par ses enjeux et ses potentialités. Mon expérience du web, jusqu’ici limitée,  s’étoffe désormais d’une connaissance progressive, aussi bien souterraine &ndash; par le code &ndash; que macrostructurelle &ndash; par la prise de conscience des mutations anthropologiques qu’induit le web. Dans ce domaine me passionnent la redynamisation des humanités numériques, la facilitation de l’édition critique de documents anciens.</p>
+                    <p>Après quinze ans dans l’édition papier, j’effectue une reconversion partielle en suivant le DESS d'édition numérique. Au fil du temps s’est imposé à moi le besoin de quitter la chaîne littéraire imprimée, lieu de ma passion mais à l'écosystème fragile, et de me former aux outils numériques, autant par curiosité que par nécessité.</p>
+            
+                    <p>Je découvre dans ce cursus une immensité que je soupçonnais mais ne concevais pas, fascinante par ses enjeux et ses potentialités. Mon expérience du web, jusqu’ici limitée,  s’étoffe désormais d’une connaissance progressive, aussi bien souterraine &ndash; par le code &ndash; que macrostructurelle &ndash; par la prise de conscience des mutations anthropologiques qu’induit le web. Dans ce domaine me passionnent la redynamisation des humanités numériques, la facilitation de l’édition critique de documents anciens.</p>
             </div>
 
             <div class="sous-titre">
@@ -47,11 +45,9 @@
             </div>
 
             <div class="paragraphe">
-                <p><em>Floralia I,</em> vidéo de <a href="http://sabrinaratte.com/">Sabrina Ratté</a>, est une œuvre spéculative d’anticipation, qui montre des échantillons de plantes alors disparues, muséifiées derrière des vitrines virtuelles. Fougères et bois mort se disloquent et se recombinent à l’infini, donnant à voir un monde tellurique, hypogé fertile et lumineux, bien davantage que l’épigé, son pendant symétrique. L’éclatement n’engendre pas ici de destruction, ni même de reviviscence, mais une reproduction à l’identique, car chaque élément retrouve à la fin sa place originelle, validant un cycle de vie qui n’est pourtant plus qu’archivé.</p>
-            </div>
-
-            <div class="paragraphe">
-                <p>Ce syncrétisme de la nature et de la technologie vient prolonger la pensée du philosophe Norbert Hillaire, qu'il déploie dans <a href="https://editions.flammarion.com/l-art-numerique/9782081225121"><em>L'art numérique</em></a>, et selon laquelle ce dernier échappe à l’éternelle opposition entre art et technique, qui remonte à la querelle des sophistes et des mécaniciens dans la Grèce antique. L’art numérique déplace les lignes de cet antagonisme réel mais mal fondé et nous accule à changer la grille d’intelligibilité qui a prévalu dans l’analyse de la modernité artistique. Sabrina Ratté, en traitant de la nature, vient ajouter à cette dichotomie un nouveau paradigme considéré erronément en opposition à la technique. Par là, elle nourrit une perception réconciliatrice de la nature, de l’art et de la technologie.</p>
+                    <p><em>Floralia I,</em> vidéo de <a href="http://sabrinaratte.com/">Sabrina Ratté</a>, est une œuvre spéculative d’anticipation, qui montre des échantillons de plantes alors disparues, muséifiées derrière des vitrines virtuelles. Fougères et bois mort se disloquent et se recombinent à l’infini, donnant à voir un monde tellurique, hypogé fertile et lumineux, bien davantage que l’épigé, son pendant symétrique. L’éclatement n’engendre pas ici de destruction, ni même de reviviscence, mais une reproduction à l’identique, car chaque élément retrouve à la fin sa place originelle, validant un cycle de vie qui n’est pourtant plus qu’archivé.</p>
+         
+                    <p>Ce syncrétisme de la nature et de la technologie vient prolonger la pensée du philosophe Norbert Hillaire, qu'il déploie dans <a href="https://editions.flammarion.com/l-art-numerique/9782081225121"><em>L'art numérique</em></a>, et selon laquelle ce dernier échappe à l’éternelle opposition entre art et technique, qui remonte à la querelle des sophistes et des mécaniciens dans la Grèce antique. L’art numérique déplace les lignes de cet antagonisme réel mais mal fondé et nous accule à changer la grille d’intelligibilité qui a prévalu dans l’analyse de la modernité artistique. Sabrina Ratté, en traitant de la nature, vient ajouter à cette dichotomie un nouveau paradigme considéré erronément en opposition à la technique. Par là, elle nourrit une perception réconciliatrice de la nature, de l’art et de la technologie.</p>
             </div>            
         </div>
     </body>
